- migrated from Java 1.6 to 1.7; - fixed bug in RequestUtil with parsing POST parameters having equal names; - various minor improvements.